# GarlicFinance

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.github/workflows/: ci-v07.yml
ArquivosFinance/CartaoBTG/: 2025-01-07_Fatura_Matheus Gasparino Alho_1556693_BTG.xlsx  2025-04-07_Fatura_Matheus Gasparino Alho_1556693_BTG.xlsx  2025-06-07_Fatura_Matheus Gasparino Alho_1556693_BTG.xlsx  2025-07-07_Fatura_Matheus Gasparino Alho_1556693_BTG.xlsx  2025-09-07_Fatura_Matheus Gasparino Alho_1556693_BTG.xlsx  2025-10-05_Fatura_Matheus Gasparino Alho_1556693_BTG.xlsx  2026-03-05_Fatura_Matheus Gasparino Alho_1556693_BTG.xlsx  Fatura_BTG_2025-02-07.xlsx  Fatura_BTG_2025-03-07.xlsx  Fatura_BTG_2025-05-07.xlsx  Fatura_BTG_2025-08-07.xlsx  Fatura_BTG_2025-11-05.xlsx  Fatura_BTG_2025-12-05.xlsx  Fatura_BTG_2026-01-05.xlsx  Fatura_BTG_2026-02-05.xlsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main-window.json
apps/desktop/src-tauri/migrations/: 001_init.sql  002_goal_allocations_by_scenario.sql  003_transactions_pagination_indexes.sql  004_monthly_budgets.sql  005_observability_events.sql
apps/desktop/src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
docs/: BACKLOG_0.3.1_A_1.0.0.md  CHECKLIST_PUBLICACAO_RC_V0.9.0.md  EVIDENCIAS_GATE_GA_V1.0.0_2026-03-04.md  EVIDENCIAS_GATE_RC_V0.9.0_2026-03-04.md  GUIA_USUARIO_GA_V1.0.0.md  OPERACAO_GA_V1.0.0.md  PII_HIGIENE_GUIDE.md  PLANO_EXECUCAO_FECHADO_0.3.1_A_1.0.0.md  RELEASE_NOTES_V1.0.0.md  VALIDACAO_MIGRACAO_DADOS_V1.0.0.md
(+75 files in other folders)
