[package]
name = "garlic-finance-desktop"
version = "0.1.0"
description = "GarlicFinance desktop app"
edition = "2021"
authors = ["GarlicFinance"]

[lib]
name = "garlic_finance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
keyring = "3"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Credentials"] }
